syntax = "proto3";

package zksync.config.fri_witness_generator;

message FriWitnessGenerator {
    optional uint32 basic_generation_timeout_in_secs = 1; // required;
    optional uint32 leaf_generation_timeout_in_secs = 2; // required;
    optional uint32 node_generation_timeout_in_secs = 3; // required;
    optional uint32 scheduler_generation_timeout_in_secs = 4; // required;
    optional uint32 max_attempts = 5; // required
    optional uint32 blocks_proving_percentage = 6; // optional; 0-100
    repeated uint32 dump_arguments_for_blocks = 7;
    optional uint32 last_l1_batch_to_process = 8; // optional
    optional uint32 force_process_block = 9; // optional
    optional bool shall_save_to_public_bucket = 10; // required
}
